<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="about_this_app">App Information</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Memory Game</string>
    <string name="how_to_play">How To Play</string>
    <string name="game_explanation">"The aim of the game is simple.\n\nYou have three lives.\n\nThe lights will flash in a sequence, watch them carefully.\n\nOnce the sequence is complete, you must enter the sequence exactly how you saw it to complete the level.\n\nIt may appear easy at first, but the patterns get longer, faster and the number of lights increase.\n\nCan you beat the memory game?"</string>
    <string name="credits">"Credits:\nEoin O'Connor\nKate Hanahoe\nPeter Cosgrave\nAndrew Doyle\nPearse Cassidy"</string>
    <string name="appdescription">"Developed as part of Mobile Application Development course for Msc Computer Science UCD 2013."</string>
    <string name="disclaimer">"Disclaimer: Please note that this application is for educational purposes only."</string>
    <string name="buttonInstructions">INSTRUCTIONS</string>
    <string name="buttonOptions">OPTIONS</string>
    <string name="buttonPlay">PLAY NOW</string>
    <string name="buttonScores">HIGH SCORES</string>
    <string name="cancel">Cancel</string>
    <string name="delete_scores">Erase Scores</string>
    <string name="feedback">Feedback</string>
    <string name="key_pref_music_volume">100</string>
    <string name="key_def_music_volume">100</string>
    <string name="feedback_actual">Please enter your feedback</string>
    <string name="feedback_actual_hint">Please enter your feedback</string>
    <string name="feedback_email">Please enter your email address</string>
    <string name="feedback_email_hint">Please enter your email address</string>
    <string name="feedback_heading">Feedback Form</string>
    <string name="feedback_instructions">We value your feedback. Enter your name and email address to be entered into our draw on January 28th, 2014 for a mystery prize! We do not pass on your details to third parties.</string>
    <string name="feedback_name">Please enter your name:</string>
    <string name="feedback_name_hint">Please enter your name:</string>
    <string name="game_page">The Game Itself</string>
    <string name="goHome">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="high_scores">High Scores</string>
    <string name="home">Home</string>
    <string name="instructions">Instructions</string>
    <string name="main_menu">Memory Game</string>
    <string name="options">Options</string>
    <string name="send">Send</string>
    <string name="action_info">Information</string>
    <string name="sound_off">Sound Off</string>
    <string name="sound_on">Sound On</string>
    <string name="title_activity_insert_scores">InsertScores</string>
	<string name="global">Global</string>
    <string name="local">Local</string>
	<string name="waitButtonText">Wait</string>
    <string name="scoresTvVal">Scores</string>
    <string name="LivesTvVal">Lives</string>
    <string name="ok">OK</string>
    <string name="score">Score</string>
    <string name="nothanks">No Thanks</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="tellscore">Your Score is: </string>
    <string name="enterscore">\nenter your score?</string>
    <string name="gameover">GAME OVER</string>
    <string name="livesleft"> lives left.</string>
    <string name="incorrect"> Incorrect</string>
    <string name="quitgame">Quit Game?</string>
    <string name="rusure">Are you sure you want to quit?</string>	
	<string name="SubmitScore">Submit Score</string>
	<string name="enterName">Enter your name:</string>
	<string name="toggleButton">Toggle Button</string>
	<string name="kidsTheme">Happy Theme</string>
	<string name="horrorTheme">Horror Theme</string>
	<string name="christmasTheme">Christmas Theme</string>
	<string name="hi">hi</string>
	<string name="music_manage">Music Management</string>
	<string name="theme_manage">Theme Management</string>
	<string name="musicby">Music and sound effects by:\n\nEoin O Connor</string>
	
</resources>
