<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="37dp"
        android:onClick="btPlayNow"
        android:text="@string/buttonPlay" />

    <Button
        android:id="@+id/buttonInstructions"
        android:onClick="btInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPlay"
        android:layout_alignRight="@+id/buttonPlay"
        android:layout_below="@+id/buttonPlay"
        android:text="@string/buttonInstructions" />

    <Button
        android:id="@+id/buttonOptions"
        android:onClick="btOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonInstructions"
        android:layout_alignRight="@+id/buttonInstructions"
        android:layout_below="@+id/buttonInstructions"
        android:text="@string/buttonOptions" />

    <Button
        android:id="@+id/buttonHighScore"
        android:layout_width="wrap_content"
        android:onClick="btHighScores"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonOptions"
        android:layout_alignRight="@+id/buttonOptions"
        android:layout_below="@+id/buttonOptions"
        android:text="@string/buttonScores" />

</RelativeLayout>