<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainMenu" >

        <TextView
            android:id="@+id/textView1"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:text="Music Management"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/check"
            android:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
             android:text="@string/toggleButton" />

        <TextView
            android:id="@+id/textView2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:text="Theme Management"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bluebutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/kidscorners"
            android:onClick="blueTheme"
            android:text="@string/kidsTheme" />

        <Button
            android:id="@+id/blackbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="24dp"
            android:background="@color/White"
            android:onClick="blackTheme"
            android:text="@string/horrorTheme" />

        <Button
            android:id="@+id/xmasbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/kidscorners"
            android:onClick="xmasTheme"
            android:text="@string/christmasTheme" />

    </LinearLayout>

</ScrollView>